Changed up the Shop page to make it a little easier to use. Hopefully it somewhat fits on Lewis's phone. Adjusted prices in Integers. Using newer constraint layout library.

--- a/app/src/main/res/layout/activity_farm_nfleet.xml
+++ b/app/src/main/res/layout/activity_farm_nfleet.xml
@@ -60,7 +60,7 @@
 
     <Button
         android:text="Buy More!"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/button8"
         android:onClick="goShop"
@@ -74,7 +74,7 @@
 
     <Button
         android:text="Finish shopping"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/button9"
         android:onClick="goNext"
