--- a/app/src/main/res/layout/activity_mississippi_river.xml
+++ b/app/src/main/res/layout/activity_mississippi_river.xml
@@ -11,12 +11,33 @@
     tools:context="edu.wisc.ece.wiscotrail.MississippiRiver">
 
     <TextView
-        android:text="Mississippi River Crossing"
+        android:text="You have reached the Mississippi River!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="197dp"
         android:id="@+id/textView31"
-        android:textSize="28sp" />
+        android:textSize="28sp"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Pay $200 to ride the ferry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/payToCrossBtn1"
+        android:layout_below="@+id/textView31"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="102dp"
+        android:onClick="payAndTakeFerry"/>
+
+    <Button
+        android:text="Attempt to ford the river on your own"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/payToCrossBtn1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:id="@+id/goToRiverCrossingBtn1"
+        android:onClick="goToRiverCrossing"/>
 </RelativeLayout>
