--- a/app/src/main/res/layout/activity_wisconsin_river.xml
+++ b/app/src/main/res/layout/activity_wisconsin_river.xml
@@ -10,4 +10,33 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.wisc.ece.wiscotrail.WisconsinRiver">
 
+    <TextView
+        android:text="You have reached the Wisconsin River!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView19"
+        android:textSize="28sp"
+        android:textAlignment="center" />
+
+    <Button
+        android:text="Pay $200 to ride the ferry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView19"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="96dp"
+        android:id="@+id/payToCrossBtn2"
+        android:onClick="payAndTakeFerry"/>
+
+    <Button
+        android:text="Attempt to ford the river on your own"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/payToCrossBtn2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="46dp"
+        android:id="@+id/goToRiverCrossingBtn2"
+        android:onClick="goToRiverCrossing"/>
 </RelativeLayout>
