--- a/app/src/main/res/layout/activity_party_health.xml
+++ b/app/src/main/res/layout/activity_party_health.xml
@@ -1,117 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_party_health"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.wisc.ece.wiscotrail.PartyHealth">
 
     <TextView
         android:text="Party Health"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="54dp"
         android:id="@+id/textView13"
-        android:textSize="28sp" />
+        android:textSize="28sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/partyLeaderName"
-        android:layout_alignRight="@+id/textView13"
-        android:layout_alignEnd="@+id/textView13"
-        android:id="@+id/partyLeaderHealth" />
+        android:id="@+id/partyLeaderHealth"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toTopOf="@+id/partyLeaderName"
+        android:layout_marginTop="4dp"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/partyLeaderName"
-        android:layout_alignStart="@+id/partyLeaderName"
-        android:id="@+id/partyMember1Name" />
+        android:id="@+id/partyMember1Name"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/partyLeaderName"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/partyMember1Name"
-        android:layout_alignLeft="@+id/partyLeaderHealth"
-        android:layout_alignStart="@+id/partyLeaderHealth"
-        android:id="@+id/partyMember1Health" />
+        android:id="@+id/partyMember1Health"
+        android:textSize="20sp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toTopOf="@+id/partyMember1Name"
+        android:layout_marginTop="4dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/partyMember1Name"
-        android:layout_alignLeft="@+id/partyMember1Name"
-        android:layout_alignStart="@+id/partyMember1Name"
-        android:layout_marginTop="17dp"
-        android:id="@+id/partyMember2Name" />
+        android:id="@+id/partyMember2Name"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/partyMember1Name" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/partyMember2Name"
-        android:layout_alignRight="@+id/partyMember1Health"
-        android:layout_alignEnd="@+id/partyMember1Health"
-        android:id="@+id/partyMember2Health" />
+        android:id="@+id/partyMember2Health"
+        android:textSize="20sp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toTopOf="@+id/partyMember2Name"
+        android:layout_marginTop="4dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/partyMember2Name"
-        android:layout_alignLeft="@+id/partyMember2Name"
-        android:layout_alignStart="@+id/partyMember2Name"
-        android:layout_marginTop="21dp"
-        android:id="@+id/partyMember3Name" />
+        android:id="@+id/partyMember3Name"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/partyMember2Name" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/partyMember3Name"
-        android:layout_alignLeft="@+id/partyMember2Health"
-        android:layout_alignStart="@+id/partyMember2Health"
-        android:id="@+id/partyMember3Health" />
+        android:id="@+id/partyMember3Health"
+        android:textSize="20sp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toTopOf="@+id/partyMember3Name"
+        android:layout_marginTop="4dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/partyMember3Name"
-        android:layout_alignLeft="@+id/partyMember3Name"
-        android:layout_alignStart="@+id/partyMember3Name"
-        android:layout_marginTop="15dp"
-        android:id="@+id/partyMember4Name" />
+        android:id="@+id/partyMember4Name"
+        android:textSize="24sp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/partyMember3Name" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/partyMember4Name"
-        android:layout_alignLeft="@+id/partyMember3Health"
-        android:layout_alignStart="@+id/partyMember3Health"
-        android:id="@+id/partyMember4Health" />
+        android:id="@+id/partyMember4Health"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="@+id/partyMember4Name"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
+        android:layout_marginTop="4dp" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/partyLeaderName"
-        android:textSize="14sp"
-        android:layout_above="@+id/partyMember1Name"
-        android:layout_alignLeft="@+id/textView13"
-        android:layout_alignStart="@+id/textView13"
-        android:layout_marginBottom="34dp" />
-</RelativeLayout>
+        android:textSize="24sp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline5"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="192dp" />
+
+</android.support.constraint.ConstraintLayout>
