--- a/app/src/main/res/layout/activity_party_health.xml
+++ b/app/src/main/res/layout/activity_party_health.xml
@@ -156,4 +156,19 @@
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="192dp" />
 
+    <Button
+        android:text="Back to Dashboard!"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/healthBackToDash"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:onClick="backToDash" />
+
 </android.support.constraint.ConstraintLayout>
