--- a/app/src/main/res/layout/activity_river_crossing.xml
+++ b/app/src/main/res/layout/activity_river_crossing.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_river_crossing"
     android:layout_width="match_parent"
@@ -8,6 +9,40 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/river"
     tools:context="edu.wisc.ece.wiscotrail.RiverCrossing">
+
+
+
+    <TextView
+        android:text="x:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView54"
+        android:textSize="28sp"
+        android:layout_alignBaseline="@+id/orientationVal1"
+        android:layout_alignBottom="@+id/orientationVal1" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/orientationVal1"
+        android:textSize="28sp"
+        android:layout_marginTop="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/textView54"
+        android:layout_toEndOf="@+id/textView54"
+        android:layout_marginLeft="44dp"
+        android:layout_marginStart="44dp" />
+
+    <ImageView
+        app:srcCompat="@drawable/wagon"
+        android:id="@+id/wagon_img"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="33dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp" />
 
 </RelativeLayout>
