--- a/app/src/main/res/layout/activity_party_health.xml
+++ b/app/src/main/res/layout/activity_party_health.xml
@@ -154,11 +154,11 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="192dp" />
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
         android:text="Back to Dashboard!"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/healthBackToDash"
         app:layout_constraintBottom_toBottomOf="parent"
