--- a/app/src/main/res/layout/activity_travel_settings.xml
+++ b/app/src/main/res/layout/activity_travel_settings.xml
@@ -1,23 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_travel_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.wisc.ece.wiscotrail.TravelSettings">
 
     <TextView
-        android:text="Travel Settings"
+        android:text="Rations"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="121dp"
-        android:layout_marginStart="121dp"
-        android:id="@+id/textView41" />
-</RelativeLayout>
+        android:id="@+id/textView24"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="24dp" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/radioGroup2"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView24"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp">
+        <RadioButton android:id="@+id/radio_generous"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Generous"
+            android:onClick="onRadioButtonClicked"
+            android:textSize="20sp" />
+        <RadioButton android:id="@+id/radio_limited"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Limited"
+            android:onClick="onRadioButtonClicked"
+            android:textSize="20sp" />
+
+        <RadioButton android:id="@+id/radio_barebones"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Barebones"
+            android:onClick="onRadioButtonClicked"
+            android:textSize="20sp" />
+    </RadioGroup>
+
+    <Button
+        android:text="Back to Dashboard!"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/travelSettingsBackToDash"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:onClick="backToDash" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/radioGroup1"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView25">
+        <RadioButton android:id="@+id/radio_steady"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Steady"
+            android:onClick="onRadioButtonClicked"
+            android:textSize="20sp" />
+        <RadioButton android:id="@+id/radio_crawling"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Crawling"
+            android:onClick="onRadioButtonClicked"
+            android:textSize="20sp" />
+
+        <RadioButton android:id="@+id/radio_myGrandma"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Grandma Could Walk Faster"
+            android:onClick="onRadioButtonClicked"
+            android:textSize="20sp" />
+    </RadioGroup>
+
+    <TextView
+        android:text="Pace"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView25"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
+        android:textSize="24sp"
+        android:textColor="@color/black"
+        android:layout_marginStart="24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="24dp" />
+
+</android.support.constraint.ConstraintLayout>
