--- a/app/src/main/res/layout/activity_hunt.xml
+++ b/app/src/main/res/layout/activity_hunt.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-
     android:clipChildren="false"
     android:clipToPadding="false"
-
-    tools:context=".Hunt"
-    android:id="@+id/huntingLayout">
-    <!-- trying to prevent clipping of cow at the bottom of the screen -->
+    tools:context=".Hunt">
 
     <FrameLayout
         android:id="@+id/camera_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
     </FrameLayout>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/huntingLayout">
 
     <ImageView
         android:layout_width="223dp"
@@ -42,10 +42,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/exitButton"
-        android:layout_width="180dp"
-        android:layout_height="29dp"
-        android:text="Return"/>
-
-</RelativeLayout>
+        <Button
+            android:id="@+id/exitButton"
+            android:layout_width="180dp"
+            android:layout_height="36dp"
+            android:text="Return"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+</FrameLayout>
