--- a/app/src/main/res/layout/activity_milwaukee.xml
+++ b/app/src/main/res/layout/activity_milwaukee.xml
@@ -10,13 +10,32 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.wisc.ece.wiscotrail.Milwaukee">
 
-    <TextView
-        android:text="Milwaukee"
+    <Button
+        android:text="Go to the Farm and Fleet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="197dp"
+        android:layout_marginBottom="141dp"
+        android:id="@+id/button18"
+        android:onClick="goFarmNFleet" />
+
+    <Button
+        android:text="Continue On!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="59dp"
+        android:id="@+id/button19"
+        android:onClick="backToDash"
+        android:layout_alignTop="@+id/button18"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="You've reached Milwaukee!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/textView26"
-        android:textSize="28sp" />
+        android:textSize="28sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
