--- a/app/src/main/res/layout/activity_minneapolis.xml
+++ b/app/src/main/res/layout/activity_minneapolis.xml
@@ -11,12 +11,33 @@
     tools:context="edu.wisc.ece.wiscotrail.Minneapolis">
 
     <TextView
-        android:text="Minneapolis"
+        android:text="You've reached Minneapolis!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="197dp"
         android:id="@+id/textView23"
-        android:textSize="28sp" />
+        android:textSize="28sp"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Go to the Farm and Fleet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="141dp"
+        android:id="@+id/button16"
+        android:onClick="goFarmNFleet"/>
+
+    <Button
+        android:text="Continue On!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button16"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:id="@+id/button17"
+        android:onClick="backToDash"/>
 </RelativeLayout>
