--- a/app/src/main/res/layout/activity_hunt.xml
+++ b/app/src/main/res/layout/activity_hunt.xml
@@ -20,11 +20,10 @@
         android:id="@+id/huntingLayout">
 
     <ImageView
+        android:src ="@drawable/cow"
         android:layout_width="223dp"
         android:layout_height="178dp"
         android:id="@+id/cow"
-        android:background="@drawable/cow"
-        android:padding="20dp"
         android:layout_marginTop="148dp"
         android:layout_marginRight="69dp"
         android:layout_marginEnd="69dp"
